Add LocalFileUtil.isFileExistInPath() method.
PiperOrigin-RevId: 513144737